--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
 
           <!-- Table -->
-          <div class="treeview js-treeview rounded bg-[bg-[#f5f7f9]]">
+          <div class="treeview js-treeview rounded bg-[#f5f7f9]" style="max-height: 60vh; overflow-y: auto; overflow-x: hidden;">
   <ul class="bg-[#f5f7f9] pb-4">
     <li class="">
       <div class="flex items-center" >
