--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body class="bg-[#dee4e9] h-screen">
-    <nav class="py-6 px-14 bg-black flex item-center justify-between">
+    <!-- <nav class="py-6 px-14 bg-black flex item-center justify-between">
       <div class="navText flex items-center">
         <img src="./img/home.png" alt="" />
         <h1 class="mx-4">Members > list</h1>
@@ -19,8 +19,70 @@
         <li class="mr-2">Academy</li>
         <li>Account</li>
       </ul>
-    </nav>
+    </nav> -->
     <!-- Navigation Menu -->
+
+   <div class="py-4">
+        <div class="flex justify-between pr-4">
+            <div class="navText flex items-center pr-6 pl-10 text-xs lg:text-base">
+        <img src="./img/home.png" alt="" />
+        <h1 class="mx-4 2xl:text-2xl " >Ryzer Gaming</h1>
+      </div>
+             <ul
+        class="text-center flex-grow flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base 2xl:max-w-[1800px] 2xl:mx-auto"
+      >
+        <li class="flex">
+          <a href="#" class="flex items-center 2xl:text-2xl"
+            ><img 
+              src="./img/grid.png"
+              alt=""
+              class="mr-2 2xl:text-2xl"
+            />Overview</a
+          >
+        </li>
+        <li class="flex">
+          <a href="#" class="flex items-center active 2xl:text-2xl"
+            ><img
+              src="./img/add-user.png"
+              alt=""
+              class="mr-2 2xl:text-2xl"
+            />Members</a
+          >
+        </li>
+        <li class="flex">
+          <a href="#" class="flex items-center 2xl:text-2xl"
+            ><img
+              src="./img/exploration.png"
+              class="mr-2 2xl:text-2xl"
+            />Analytics</a
+          >
+        </li>
+        <li class="flex">
+          <a href="#" class="flex items-center 2xl:text-2xl"
+            ><img
+              src="./img/lightning.png"
+              class="mr-2 2xl:text-2xl"
+            />Integrations</a
+          >
+        </li>
+        <li class="flex">
+          <a href="#" class="flex items-center 2xl:text-2xl"
+            ><img
+              src="./img/envelope.png"
+              class="mr-2 2xl:text-2xl"
+            />Broadcasts</a
+          >
+        </li>
+      </ul>
+        </div>
+    </div>
+
+
+    <!-- <div>
+     <div class="navText flex items-center">
+        <img src="./img/home.png" alt="" />
+        <h1 class="mx-4">Ryzer Gaming</h1>
+      </div>
     <nav class="py-6 px-14 2xl:pl-[220px] 2xl:max-w-[1800px] 2xl:mx-auto">
       <ul
         class="flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base 2xl:pl-"
@@ -69,7 +131,7 @@
         </li>
       </ul>
     </nav>
-
+</div> -->
     <!-- Main Content -->
     <div class="flex">
       <!-- Left Menu -->
@@ -233,7 +295,7 @@
           </div>
 
           <!-- Table -->
-          <div class="treeview js-treeview rounded bg-[#f5f7f9]" style="max-height: 58vh; overflow-y: auto; overflow-x: hidden;">
+          <div class="treeview js-treeview rounded bg-[#f5f7f9]" style="max-height: 45vh; overflow-y: auto; overflow-x: hidden;">
   <ul class="bg-[#f5f7f9] pb-4">
     <li class="">
       <div class="flex items-center" >
