--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           >
         </li>
         <li class="flex">
-          <a href="#" class="flex items-center 2xl:text-2xl"
+          <a href="#" class="flex items-center 2xl:text-2xl strike-line line-through"
             ><img
               src="./img/envelope.png"
               class="mr-2 2xl:text-2xl"
@@ -188,10 +188,10 @@
       <!-- Center Content -->
 
       <main
-        class="h-[90vh] md:ml-5 bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-blue-700 via-blue-800 to-gray-900 w-[80%] 2xl:text-2xl 2xl:w-full 2xl:pl-4"
+        class="h-screen md:ml-5 bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-blue-700 via-blue-800 to-gray-900 w-[80%] 2xl:text-2xl 2xl:w-full 2xl:pl-4"
       >
         <div
-          class="h-[80vh] mt-2 bg-opacity-50 mx-8 full px-6 pt-5 pb-20 mb-4"
+          class="h-[80vh] mt-2 bg-opacity-50 mx-8 full px-6 pt-5 mb-4"
           style=" background: rgba( 255, 255, 255, 0.15 );
                   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
                   backdrop-filter: blur( 18px );
@@ -295,7 +295,7 @@
           </div>
 
           <!-- Table -->
-          <div class="treeview js-treeview rounded bg-[#f5f7f9]" style="max-height: 45vh; overflow-y: auto; overflow-x: hidden;">
+          <div class="treeview js-treeview rounded bg-[#f5f7f9] max-[980px]:h-[70%] h-[75%]" style="overflow-y: auto; overflow-x: hidden;">
   <ul class="bg-[#f5f7f9] pb-4">
     <li class="">
       <div class="flex items-center" >
